// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SocialCardReactions test renders correctly - empty 1`] = `null`;

exports[`SocialCardReactions test renders correctly - no comments 1`] = `
<div
  className="Social_reaction"
>
  <a
    className="Social_reaction_fixed"
    href="#"
  >
    <span
      className="Social_reaction_like"
    />
  </a>
  <span
    className="Social_reaction_strech"
  >
    <a
      className="Social_reaction_number"
      href="#"
    >
      157
    </a>
  </span>
  <a
    className="Social_reaction_number Social_reaction_fixed"
    href="#"
  >
    3
     Shares
  </a>
</div>
`;

exports[`SocialCardReactions test renders correctly - no likes 1`] = `
<div
  className="Social_reaction"
>
  <a
    className="Social_reaction_number Social_reaction_fixed"
    href="#"
  >
    2
     Comments
  </a>
  <a
    className="Social_reaction_number Social_reaction_fixed"
    href="#"
  >
    3
     Shares
  </a>
</div>
`;

exports[`SocialCardReactions test renders correctly - no shares 1`] = `
<div
  className="Social_reaction"
>
  <a
    className="Social_reaction_fixed"
    href="#"
  >
    <span
      className="Social_reaction_like"
    />
  </a>
  <span
    className="Social_reaction_strech"
  >
    <a
      className="Social_reaction_number"
      href="#"
    >
      157
    </a>
  </span>
  <a
    className="Social_reaction_number Social_reaction_fixed"
    href="#"
  >
    2
     Comments
  </a>
</div>
`;

exports[`SocialCardReactions test renders correctly 1`] = `
<div
  className="Social_reaction"
>
  <a
    className="Social_reaction_fixed"
    href="#"
  >
    <span
      className="Social_reaction_like"
    />
  </a>
  <span
    className="Social_reaction_strech"
  >
    <a
      className="Social_reaction_number"
      href="#"
    >
      157
    </a>
  </span>
  <a
    className="Social_reaction_number Social_reaction_fixed"
    href="#"
  >
    2
     Comments
  </a>
  <a
    className="Social_reaction_number Social_reaction_fixed"
    href="#"
  >
    3
     Shares
  </a>
</div>
`;
